--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -8,4 +8,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 COPY ../silver/lista-insucesso-processed.csv .
 
-CMD ["python", "scripts/populate.py"]
+CMD sh -c "echo 'Aguardando 10 segundos para inicializar...' && sleep 10 && python scripts/populate.py"
